@@ -401,6 +401,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4456) Add hook for marking article patrolled
 * (bug 3194) default implementation of translateBlockExpiry
   which uses ipboptions
+* (bug 4446) $wgExportAllowHistory option to explicitly disable history in
+  Special:Export form, 'exportnohistory' message to translate live hack.
 
 
 === Caveats ===
